# MeshFEMSparse

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindCHOLMOD.cmake  MeshFEMFetchEditableRepo.cmake  MeshFEMSparseDependencies.cmake  MeshFEMSparseDownloadExternal.cmake
src/lib/MeshFEMSparse/: BlockCSCHessian.cc  BlockCSCHessian.hh  BlockCSCHessianDynCastWorkaround.hh  BorderedSparseHessian.cc  BorderedSparseHessian.hh  ParallelAssembly.hh  SparseMatrices.hh  SparsityLRU.hh  Stencils.hh  SystemAssembler.hh  VarStructure.hh
src/lib/MeshFEMSparse/Solvers/: AccelerateFactorizer.cc  AccelerateFactorizer.hh  AdaptiveOrderingSelection.hh  CatamariConversionPlan.hh  CatamariConverter.hh  CatamariFactorizer.cc  CatamariFactorizer.hh  CatamariFactorizerLegacy.cc  CholeskyFactorizerBase.hh  CholmodFactorizer.hh  MatrixRecorder.cc  MatrixRecorder.hh  PardisoFactorizer.cc  PardisoFactorizer.hh  SPSDSystem.hh  ScotchOrdering.hh  UmfpackFactorizer.hh  accelerate_ordering.cc  accelerate_ordering.hh  cholmod_ordering.hh  make_cholesky_factorizer.cc  make_cholesky_factorizer.hh  pardiso_ordering.cc  pardiso_ordering.hh
src/lib/MeshFEMSparse/Utilities/: argsort.hh  static_sort.hh
tests/: CMakeLists.txt  benchmark_linear_systems.cc  benchmark_scotch.cc  benchmark_solves.cc  benchmark_sorts.cc  benchmark_sparsity_lru.cc  solve_system.cc  test_block_csc_hessian.cc  test_sparse_matrices.cc
